<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.CharacterDetailFragment"
    android:background="@color/background">

    <ImageView
        android:id="@+id/imageDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/fullNameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/constant_fullName"
        android:textColor="@color/white"
        android:textSize="@dimen/text_xlarge"
        android:fontFamily="@font/harry_potter_font"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageDetail" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewDetail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium"
        app:cardBackgroundColor="@color/cardView"
        app:cardCornerRadius="@dimen/radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullNameText">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutcardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/nicknameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:text="@string/nicknameText"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/nickname"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/nickname" />

            <TextView
                android:id="@+id/hogwartsHouseText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:text="@string/hogwartsHouseText"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/hogwartsHouse"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/hogwartsHouse" />

            <TextView
                android:id="@+id/interpretedByText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:text="@string/interpretedByText"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/interpretedBy"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/interpretedBy" />

            <TextView
                android:id="@+id/childrenText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:text="@string/childrenText"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/children"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/children" />

            <TextView
                android:id="@+id/nickname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/constant_nickname"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/nicknameText"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/hogwartsHouse"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/constant_hogwartsHouse"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/hogwartsHouseText"
                app:layout_constraintTop_toBottomOf="@+id/nickname" />

            <TextView
                android:id="@+id/interpretedBy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/constant_interpretedBy"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/interpretedByText"
                app:layout_constraintTop_toBottomOf="@+id/hogwartsHouse" />

            <TextView
                android:id="@+id/children"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/constant_children"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/childrenText"
                app:layout_constraintTop_toBottomOf="@+id/interpretedBy" />

            <TextView
                android:id="@+id/birthdate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/constant_birthdate"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/birthdateText"
                app:layout_constraintTop_toBottomOf="@+id/children" />

            <TextView
                android:id="@+id/birthdateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:text="@string/birthdateText"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/birthdate" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>